k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-finder-deployment
  namespace: "2401063"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-finder
  template:
    metadata:
      labels:
        app: recipe-finder
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: recipe-finder
          image: 127.0.0.1:30085/2401063/recipe-finder:v4
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-finder-service
  namespace: "2401063"
spec:
  selector:
    app: recipe-finder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-finder-ingress
  namespace: "2401063"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 2401063.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-finder-service
                port:
                  number: 80
